--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -23,7 +23,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-        </div>z
+        </div>
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -208,9 +208,9 @@
                         X"
                     </button> -->
                     <div class="row">
-                        <div class="col-lg-12 sticky-top text-right relative">
+                        <div class="col-lg-12  text-right relative">
                             <div class="bg-white float-right">
-                                <button mat-icon-button *ngIf="!viewonly" (click)="removeImage(url,i)" class="close-button float-right absolute right-4 top-2 bg-red-500"  [mat-dialog-close]="true">
+                                <button mat-icon-button *ngIf="!viewonly" (click)="removeImage(url,i)" class="close-button float-right absolute right-4 top-2 bg-red-500">
                                     <!-- X -->
                                     <mat-icon class="close-icon w-12 h-12 text-white">close</mat-icon>
                                 </button>
@@ -248,7 +248,7 @@
                         <div class="row">
                             <div class="col-lg-12 sticky-top text-right relative">
                                 <div class="bg-white float-right">
-                                    <button mat-icon-button *ngIf="!viewonly" (click)="removeVideo(url,i)" class="close-button float-right absolute right-4 top-2 bg-red-500"  [mat-dialog-close]="true">
+                                    <button mat-icon-button *ngIf="!viewonly" (click)="removeVideo(url,i)" class="close-button float-right absolute right-4 top-2 bg-red-500">
                                         <!-- X -->
                                         <mat-icon class="close-icon text-white w-12 h-12 text-white">close</mat-icon>
                                     </button>
