--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -1,34 +1,37 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Search for Loan Utilization</div>
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight">Search for Loan Utilization</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
+    <div
         [formGroup]="loanutilizationSearch">
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-
-                <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
-                    <mat-label class="customMatLabel">Zone</mat-label>
-                    <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
-                        <mat-option [value]="SelectedZones?.ZoneId">
-                            {{SelectedZones?.ZoneName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
-                    <mat-label class="customMatLabel">Zone</mat-label>
-                    <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
-                                (selectionChange)="changeZone($event)">
-                        <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                    [disabled]="disable_zone">
-                            {{zone?.ZoneName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
 
 
+        <div class="row">
+            <div class="col-lg-3 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
+                        <mat-label class="customMatLabel">Zone</mat-label>
+                        <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
+                            <mat-option [value]="SelectedZones?.ZoneId">
+                                {{SelectedZones?.ZoneName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
+                        <mat-label class="customMatLabel">Zone</mat-label>
+                        <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
+                                    (selectionChange)="changeZone($event)">
+                            <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                        [disabled]="disable_zone">
+                                {{zone?.ZoneName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+    
+    
+                </div>
             </div>
-
-            <div class="col-md-3 col-sm-12">
+            <div class="col-lg-3 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
@@ -48,40 +51,34 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
-
             </div>
-
-            <div class="col-md-3 col-sm-12">
-
-                <div class="col-md-12 kt-margin-bottom-10-mobile mr-10">
-                    <!-- <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <div class="col-lg-3 col-sm-12">
+                                    <!-- <mat-form-field class="mat-form-field-fluid" appearance="outline">
                   <mat-label>loanutilization Name</mat-label>
                   <input matInput formControlName="loanutilizationName" placeholder="Enter loanutilization Name" maxlength="100" autocomplete="off" appAlphabetOnly>
                 </mat-form-field> -->
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">From</mat-label>
-                        <input matInput [matDatepicker]="picker" placeholder="ddMMyyyy" autocomplete="off"
-                            formControlName="FromDate" [max]="getToday()" (dateChange)="setFromDate()" autocomplete="off">
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
-                </div>
-
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label class="customMatLabel">From</mat-label>
+                    <input matInput [matDatepicker]="picker" placeholder="ddMMyyyy" autocomplete="off"
+                        formControlName="FromDate" [max]="getToday()" (dateChange)="setFromDate()" autocomplete="off">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+            </div>
+            <div class="col-lg-3 col-sm-12">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label class="customMatLabel">To</mat-label>
+                    <input matInput [matDatepicker]="picker1" placeholder="ddMMyyyy" formControlName="ToDate"
+                        [min]="minDate" [max]="getTodayForTo()" (dateChange)="setToDate()" autocomplete="off">
+                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker1></mat-datepicker>
+                </mat-form-field>
             </div>
 
-            <div class="col-md-3 col-sm-12">
-
-                <div class="col-md-12 kt-margin-bottom-10-mobile mr-10">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">To</mat-label>
-                        <input matInput [matDatepicker]="picker1" placeholder="ddMMyyyy" formControlName="ToDate"
-                            [min]="minDate" [max]="getTodayForTo()" (dateChange)="setToDate()" autocomplete="off">
-                        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                        <mat-datepicker #picker1></mat-datepicker>
-                    </mat-form-field>
-                </div>
-            </div>
         </div>
+
+
+
 
 
 
