--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -112,7 +112,7 @@
     <div class="col-md-3 col-sm-12">
     <div class="flex flex-shrink-0 items-center mr-20">
       <button (click)="searchloanutilization()" mat-flat-button [color]="'primary'">
-        <span class="ml-2 mr-1">Find</span>
+        <mat-icon class="mr-2">search</mat-icon> Search
       </button>
     </div>
   </div>
