--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -2,7 +2,7 @@
     <div class="text-4xl font-extrabold tracking-tight">Search for Loan Utilization</div>
     <!-- Header -->
     <div
-        [formGroup]="loanutilizationSearch">
+        [formGroup]="loanutilizationSearch" class="mt-4">
 
 
         <div class="row">
@@ -156,7 +156,7 @@
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-4  mb-2">
             <button (click)="searchloanutilization()" mat-flat-button [color]="'primary'">
-                <span class="ml-2 mr-1">Find</span>
+                <mat-icon class="mr-2">search</mat-icon> Search
             </button>
         </div>
     </div>
