--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -103,9 +103,8 @@
 
 <div class="row">
     <div class="col-lg-4">
-        <button mat-raised-button color="accent"
-        type="button" (click)="searchVendor()"><span><i
-    class="fa fa-search"> &nbsp;</i> Find</span></button>
+        <button mat-raised-button class="mat-raised-button mat-button-base mat-primary"
+        type="button" (click)="searchVendor()"><mat-icon class="mr-2">search</mat-icon> Search</button>
 </div>
 </div>
 
