--- a/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-radius/vendor-radius.component.html
@@ -1,5 +1,5 @@
 <div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-2">Nearest Vendor</div>
+    <div class="text-4xl font-extrabold tracking-tight">Nearest Vendor</div>
 
     <!-- Header -->
     <div class=" py-4"
@@ -13,7 +13,7 @@
 
         <row class="row">
             <div class="col-lg-4">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
                         <mat-label class="customMatLabel">Zone</mat-label>
@@ -79,7 +79,7 @@
 
         <row class="row">
             <div class="col-lg-4">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Find Vendor With Radius:</mat-label>
@@ -122,11 +122,10 @@
 
         <row class="row">
             <div class="col-lg-4">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                    <button mat-raised-button color="accent"
-                            type="button" (click)="onSelect()"><span><i
-                        class="fa fa-search"> &nbsp;</i> Find</span></button>
+                    <button mat-raised-button class="mat-raised-button mat-button-base mat-primary"
+                            type="button" (click)="onSelect()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                 </div>
             </div>
 
