--- a/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
+++ b/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
@@ -1,5 +1,5 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4 ">Borrower Information</div>
+    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4 ">Search Land</div>
 
     <!-- Header -->
     <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8"
@@ -29,7 +29,7 @@
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                <mat-select [(ngModel)]="selected_b" formControlName="BranchId" [disabled]="disable_branch"
+                <mat-select [(ngModel)]="selected_b" formControlName="" [disabled]="disable_branch"
                             (selectionChange)="changeBranch($event)"
                             *ngIf="!single_branch">
                     <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
@@ -60,8 +60,6 @@
                 <mat-label>Cnic</mat-label>
                 <input matInput formControlName="Cnic" placeholder="Enter Cnic" maxlength="100" autocomplete="off"
                        [mask]="maskEnums.cnic">
-                <!--      <mat-error *ngIf="hasError('Cnic', 'required')">Cnic <strong>required</strong></mat-error>-->
-                <!--<mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>{{errors.cnic}}</strong></mat-error>-->
             </mat-form-field>
         </div>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" *ngIf="LandStatusLov">
