--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -1,5 +1,5 @@
 <div class="px-10 pt-4sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-2 py-4">Set Target</div>
+    <div class="text-4xl font-extrabold tracking-tight px-2 py-4">Deceased Customers</div>
     <form [formGroup]="customerForm" class="kt-form kt-form--group-seperator-dashed">
         <div class="form-group kt-form__group row">
 
@@ -12,7 +12,7 @@
 
                 <mat-form-field class="mat-form-field-fluid" appearance="outline">
                     <mat-label class="customMatLabel">Zone<strong class="matMandatory">*</strong></mat-label>
-                    <input matInput placeholder="Enter Tran Date" formControlName="Zone" maxlength="13"
+                    <input matInput placeholder="Zone" formControlName="Zone" maxlength="13"
                            autocomplete="off" readonly="readonly"/>
                 </mat-form-field>
             </div>
@@ -21,7 +21,7 @@
 
                 <mat-form-field class="mat-form-field-fluid" appearance="outline">
                     <mat-label class="customMatLabel">Branch<strong class="matMandatory">*</strong></mat-label>
-                    <input matInput placeholder="Enter Tran Date" formControlName="Branch" maxlength="13"
+                    <input matInput placeholder="Branch" formControlName="Branch" maxlength="13"
                            autocomplete="off" readonly="readonly"/>
                 </mat-form-field>
             </div>
