--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -62,8 +62,8 @@
                     </mat-select>
                   </mat-form-field>
                 </div>
-                <div class="col-lg-2 " style="margin-top:5px;">
-                  <button class="btn btn-secondary mt-19 kt-login__btn-primary btn-block" color="primary" type="button" (click)="find()"><span><i class="fa fa-search"> &nbsp;</i> Find</span></button>
+                <div class="col-lg-2 mt-4">
+                  <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" color="primary" type="button" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Search</button>
                 </div>
               </div>
 
