--- a/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
+++ b/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
@@ -1,8 +1,8 @@
-<div class="absolute inset-0 bg-white flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
+<div class="px-10 pt-4 absolute inset-0 bg-white flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
 
     <!-- Header -->
     <div
-        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between p-6 sm:py-8 sm:px-10  dark:bg-transparent">
+        class="flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4  dark:bg-transparent">
         <div class="flex-1 min-w-0">
 
             <!-- Title -->
@@ -23,7 +23,7 @@
     </div>
 
     <!-- Main -->
-    <div class="flex-auto mx-10 shadow-lg rounded p-5 bg-gray-50" 
+    <div class=" " 
     style=" 
             min-width: max-content;
             max-height: 70vh;
@@ -36,20 +36,20 @@
         <div class="form-group row">
             <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile"
                  id="custom-table-activity-list">
-                <div class="custom-accordion" *ngFor="let parent_configuration of configurations;let i=index">
-                    <div v class="custom-accordion-head" (click)="toggleAccordion(i)"
+                <div class="custom-accordion rounded my-2 shadow bg-gray-50" *ngFor="let parent_configuration of configurations;let i=index">
+                    <div v class="custom-accordion-head border-0" (click)="toggleAccordion(i)"
                          style="cursor: pointer">
-                        <div class="custom-padding">
-                            <h3>
+                        <div class="custom-padding" style="align-self: center;">
+                            <h3 class="font-medium">
                                 {{parent_configuration.KeyName}}
                             </h3>
                         </div>
                         <div class="custom-padding" style="display: flex;
     margin-right: 10%;">
-                            <button mat-icon-button color="primary">
-                                <mat-icon>delete</mat-icon>
+                            <button mat-icon-button >
+                                <mat-icon class="text-red-500">delete_forever</mat-icon>
                             </button>
-                            <button mat-icon-button color="warn" style="margin-left: 10%;"
+                            <button mat-icon-button color="primary" style="margin-left: 10%;"
                                     (click)="editConfiguration(parent_configuration)">
                                 <mat-icon>edit</mat-icon>
                             </button>
@@ -61,7 +61,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="custom-accordion-body" id="{{'table_'+i}}" style="display: none">
+                    <div class="custom-accordion-body bg-white border rounded" id="{{'table_'+i}}" style="display: none">
                         <table class="table table-responsive" style="display: inline-table !important;">
                             <thead class="thead-light">
                             <tr>
