--- a/src/app/modules/customer/correction-phone/correction-phone.component.html
+++ b/src/app/modules/customer/correction-phone/correction-phone.component.html
@@ -1,11 +1,11 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Correction of Phone Cell</div>
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+  <div class="text-4xl font-extrabold tracking-tight">Correction of Phone Cell</div>
 
   <!-- Header -->
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
     style="flex-wrap: wrap">
   </div>
-  <div class="flex flex-auto overflow-y-scroll mx-12" style="flex-direction: column;">
+  <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
     <form [formGroup]="cpForm" class="kt-form kt-form--group-seperator-dashed">
       <div class="form-group kt-form__group row">
 
@@ -13,7 +13,7 @@
           Please enter valid Input
         </kt-alert> -->
       
-          <div class="col-lg-3 kt-margin-bottom-20-mobile">
+          <div class="col-lg-4 kt-margin-bottom-20-mobile">
   
               <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                   <mat-label class="customMatLabel">Zone<strong class="matMandatory">*</strong></mat-label>
@@ -21,24 +21,23 @@
                 </mat-form-field>
           </div>
   
-          <div class="col-lg-3 kt-margin-bottom-20-mobile">
+          <div class="col-lg-4 kt-margin-bottom-20-mobile">
               
               <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                   <mat-label class="customMatLabel">Branch<strong class="matMandatory">*</strong></mat-label>
                   <input matInput formControlName="Branch"  maxlength="13" autocomplete="off" readonly="readonly"/>
                 </mat-form-field>
           </div>
+          <div class="col-lg-4 kt-margin-bottom-20-mobile">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+              <mat-label class="customMatLabel">CNIC#</mat-label>
+              <!-- <input appNumberOnly matInput (keyup)="changed($event)" placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" [readonly]="viewOnly"/> -->
+              <input appNumberOnly matInput placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" />
+            </mat-form-field>
+        </div>
       </div>
   
-      <div class="form-group kt-form__group row"> 
-          <div class="col-lg-3 kt-margin-bottom-20-mobile">
-              <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                <mat-label class="customMatLabel">CNIC#</mat-label>
-                <!-- <input appNumberOnly matInput (keyup)="changed($event)" placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" [readonly]="viewOnly"/> -->
-                <input appNumberOnly matInput placeholder="Enter Cnic" formControlName="Cnic"  maxlength="13" autocomplete="off" />
-              </mat-form-field>
-          </div>
-      </div>
+
   
       <div class="form-group kt-form__group row"> 
           <div class="col-lg-2 kt-margin-bottom-20-mobile">
