--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -12,8 +12,7 @@
                         <input matInput formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off">
                         <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
                     </mat-form-field>
-                </div>
-                <div class="col-md-12 " *ngIf="isUserAdmin">
+                
                     <mat-form-field class="mat-form-field-fluid w-full map-fields" appearance="outline" *ngIf="!BMUser">
                         <mat-label>Zone</mat-label>
                         <mat-select (selectionChange)="GetBranches($event)" formControlName="Zone">
@@ -32,13 +31,14 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
-                <div class="col-md-12 " *ngIf="!isUserAdmin && !isZoneUser">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label>Branch</mat-label>
-                        <input matInput formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off">
-                        <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
-                    </mat-form-field>
-                </div>
+
+            </div>
+            <div class="col-md-3 " *ngIf="!isUserAdmin && !isZoneUser">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label>Branch</mat-label>
+                    <input matInput formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off">
+                    <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
+                </mat-form-field>
             </div>
 
             <div class="col-md-3 col-sm-12">
@@ -75,6 +75,8 @@
                 </div>
 
             </div>
+            </div>
+            <div class="row">
             <div class="col-md-3 col-sm-12">
                 <div class="col-md-12 kt-margin-bottom-10-mobile">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -87,13 +89,6 @@
 
 
             </div>
-        </div>
-
-
-
-
-        <div class="row">
-            
             <div class="col-md-3 col-sm-12">
                 <div class="col-md-12 kt-margin-bottom-10-mobile">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -116,7 +111,7 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-3 col-sm-12">
 
                 <div *ngIf="CustomerStatusLov" class="col-md-12 kt-margin-bottom-10-mobile flex">
 
@@ -132,18 +127,30 @@
                         </mat-select>
         
                     </mat-form-field>
-                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-        
-                        <button mat-raised-button color="accent" type="button" (click)="searchCustomer()">
-                            <mat-icon>search</mat-icon>
-                            Search
-                        </button>
-                    </div>
+
         
                 </div>
 
 
             </div>
+        </div>
+
+
+
+
+        <div class="row">
+            
+            <div class="col-md-3 col-sm-12">
+                <div class="flex flex-shrink-0 items-center sm:mt-0">
+        
+                    <button mat-raised-button class="mat-raised-button mat-button-base mat-primary" type="button" (click)="searchCustomer()">
+                        <mat-icon class="mr-2">search</mat-icon>
+                        Search
+                    </button>
+                </div>
+            </div>
+
+
 
 
         </div>
@@ -158,7 +165,7 @@
 
 
     </div>
-    <div class="flex flex-auto overflow-scroll mx-12" style="flex-direction: column;">
+    <div class="flex flex-auto overflow-scroll mt-4" style="flex-direction: column;">
 
         <div class="example-table-container">
 
