--- a/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
@@ -1,35 +1,52 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight mx-10 mt-4">Loan Case Inquiry</div>
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+  <div class="text-4xl font-extrabold tracking-tight">Loan Case Inquiry</div>
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8"
+  <div class="pt-4"
   [formGroup]="RecoveryForm">
-  <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-    <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
-      <mat-label class="customMatLabel">Zone <strong class="matMandatory">*</strong></mat-label>
-      <input matInput placeholder="Enter Zone" formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off" />
-    </mat-form-field>
 
-    <mat-form-field class="mat-form-field-fluid  mr-4" appearance="outline">
-      <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-      <input matInput placeholder="Enter Branch" formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off" />
-    </mat-form-field>
-
-    <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
-      <mat-label class="customMatLabel">LA File/Booklet #</mat-label>
-      <input matInput placeholder="Enter Transaction Id" formControlName="TransactionId" maxlength="30" autocomplete="off" />
-      <mat-error *ngIf="hasError('TransactionId', 'required')">LA File/Booklet # <strong>required</strong></mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
+  <div class="row">
+    <div class="col-lg-3 col-sm-12">
+      <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+        <mat-label class="customMatLabel">Zone <strong class="matMandatory">*</strong></mat-label>
+        <input matInput placeholder="Enter Zone" formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off" />
+      </mat-form-field>
+    </div>
+    <div class="col-lg-3 col-sm-12">
+      <mat-form-field class="mat-form-field-fluid  w-full " appearance="outline">
+        <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
+        <input matInput placeholder="Enter Branch" formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off" />
+      </mat-form-field>
+    </div>
+    <div class="col-lg-3 col-sm-12">
+      <mat-form-field class="mat-form-field-fluid w-full " appearance="outline">
+        <mat-label class="customMatLabel">LA File/Booklet #</mat-label>
+        <input matInput placeholder="Enter Transaction Id" formControlName="TransactionId" maxlength="30" autocomplete="off" />
+        <mat-error *ngIf="hasError('TransactionId', 'required')">LA File/Booklet # <strong>required</strong></mat-error>
+      </mat-form-field>
+    </div>
+    <div class="col-lg-3 col-sm-12">
+        
+    <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
       <mat-label class="customMatLabel">Loan Case #</mat-label>
       <input matInput placeholder="Enter Loan Case #" formControlName="LoanCaseNo" maxlength="30" autocomplete="off" />
       <mat-error *ngIf="hasError('LoanCaseNo', 'required')">Loan Case # <strong>required</strong></mat-error>
     </mat-form-field>
+    </div>
 
-    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4 mb-2">
-      <button (click)="find()" class="ml-4" mat-flat-button [color]="'primary'">
-        <span class="ml-2 mr-1">Find</span>
+</div>
+
+
+
+  <div class="row">
+
+    <div class="col-lg-3 col-sm-12">
+
+
+    <div class="flex flex-shrink-0 items-center mt-4 sm:mt-0 mb-2">
+      <button (click)="find()"  mat-flat-button [color]="'primary'">
+        <mat-icon class="mr-2">search</mat-icon>Search
       </button>
+    </div>
     </div>
 
 </div>
