--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -31,7 +31,7 @@
         ">
                 <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile  mat-elevation-z8"
                      id="custom-table-activity-list">
-                    <div class="custom-accordion rounded-lg my-2 shadow-lg bg-gray-50" *ngFor="let activity of userActivities;let i=index">
+                    <div class="custom-accordion  rounded-lg my-2 shadow border" *ngFor="let activity of userActivities;let i=index">
                         <div class="custom-accordion-head border-0" (click)="toggleAccordion(i)" style="cursor: pointer">
                             <div class="custom-padding" style="align-self: center;">
                                 <h3 class="font-medium">
@@ -58,7 +58,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="custom-accordion-body bg-white border rounded" id="{{'table_'+i}}" style="display: none">
+                        <div class="custom-accordion-body bg-gray-50 border-t rounded" id="{{'table_'+i}}" style="display: none">
                             <table class="table table-responsive" style="display: inline-table !important;">
                                 <thead class="thead-light">
                                 <tr>
